--- a/todo/src/main/resources/templates/layouts/layout.html
+++ b/todo/src/main/resources/templates/layouts/layout.html
@@ -19,7 +19,10 @@
     <div class="container-fluid">
       <div class="row">
         <div th:replace="~{/fragments/sidebar::sidebar}"></div>
-        <main layout:fragment="content" class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <main
+          layout:fragment="content"
+          class="col-md-9 ms-sm-auto col-lg-10 px-md-4"
+        >
           <!-- content 영역 -->
         </main>
       </div>
