--- a/book/src/main/resources/templates/book/list.html
+++ b/book/src/main/resources/templates/book/list.html
@@ -19,7 +19,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr th:each="dto : ${list}">
+        <tr th:each="dto : ${result.dtoList}">
           <th scope="row" th:text="${dto.id}"></th>
           <td th:text="${dto.categoryName}"></td>
           <td>
@@ -34,6 +34,37 @@
         </tr>
       </tbody>
     </table>
+    <nav aria-label="...">
+      <ul class="pagination justify-content-center">
+        <li class="page-item" th:if="${result.prev}">
+          <a
+            class="page-link"
+            th:href="@{lsit(page=${result.start-1},size=${result.size})}"
+            >Previous</a
+          >
+        </li>
+
+        <li
+          th:class="'page-item ' + ${result.page == page ? 'active':''}"
+          aria-current="page"
+          th:each="page : ${result.pageList}"
+        >
+          <a
+            class="page-link"
+            th:href="@{lsit(page=${page},size=${result.size})}"
+            th:text="${page}"
+          ></a>
+        </li>
+
+        <li class="page-item" th:if="${result.next}">
+          <a
+            class="page-link"
+            th:href="@{lsit(page=${result.end+1},size=${result.size})}"
+            >Next</a
+          >
+        </li>
+      </ul>
+    </nav>
   </div>
   <th:block layout:fragment="script">
     <script>
