--- a/book/src/main/resources/templates/book/create.html
+++ b/book/src/main/resources/templates/book/create.html
@@ -21,6 +21,11 @@
               th:selected="${dto.categoryName} == ${cate.id}"
             ></option>
           </select>
+          <div
+            th:if="${#fields.hasErrors('categoryName')}"
+            th:errors="*{categoryName}"
+            class="text-danger"
+          ></div>
         </div>
       </div>
       <div class="mb-3 row">
@@ -39,25 +44,63 @@
               th:selected="${dto.publisherName} == ${pub.id}"
             ></option>
           </select>
+          <div
+            th:if="${#fields.hasErrors('publisherName')}"
+            th:errors="*{publisherName}"
+            class="text-danger"
+          ></div>
         </div>
       </div>
       <div class="mb-3 row">
         <label for="title" class="col-sm-2 col-form-label">제목</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="title" name="title" />
+          <input
+            type="text"
+            class="form-control"
+            id="title"
+            name="title"
+            th:value="${dto.title}"
+          />
+          <div
+            th:if="${#fields.hasErrors('title')}"
+            th:errors="*{title}"
+            class="text-danger"
+          ></div>
         </div>
       </div>
 
       <div class="mb-3 row">
         <label for="writer" class="col-sm-2 col-form-label">저자</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="writer" name="writer" />
+          <input
+            type="text"
+            class="form-control"
+            id="writer"
+            name="writer"
+            th:value="${dto.writer}"
+          />
+          <div
+            th:if="${#fields.hasErrors('writer')}"
+            th:errors="*{writer}"
+            class="text-danger"
+          ></div>
         </div>
       </div>
       <div class="mb-3 row">
         <label for="price" class="col-sm-2 col-form-label">가격</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="price" name="price" />
+          <input
+            type="text"
+            class="form-control"
+            id="price"
+            name="price"
+            th:value="${dto.price}"
+          />
+          <div
+            th:if="${#fields.hasErrors('price')}"
+            th:errors="*{price}"
+            class="text-danger"
+          ></div>
         </div>
       </div>
       <div class="mb-3 row">
@@ -68,15 +111,21 @@
             class="form-control"
             id="salePrice"
             name="salePrice"
+            th:value="${dto.salePrice}"
           />
+          <div
+            th:if="${#fields.hasErrors('salePrice')}"
+            th:errors="*{salePrice}"
+            class="text-danger"
+          ></div>
         </div>
       </div>
-
       <div>
         <button class="btn btn-primary">추가</button>
         <a th:href="@{list}" class="btn btn-secondary">목록</a>
       </div>
     </form>
+
     <form action="" method="post" id="actionForm">
       <input type="hidden" name="id" th:value="${dto.id}" />
     </form>
