--- a/book/src/main/resources/templates/book/list.html
+++ b/book/src/main/resources/templates/book/list.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<!-- layout상속받는중 -->
-<html lang="en" layout:decorate="~{layouts/layout}">
+<html lang="en" layout:decorate="~{/layouts/layout}">
   <th:block layout:fragment="css">
     <style></style>
   </th:block>
 
-  <!-- div가 content라고 지정된 layout에 포함될것 -->
   <div layout:fragment="content" class="container">
     <h1>도서 전체 목록</h1>
     <table class="table">
@@ -24,7 +22,7 @@
           <td th:text="${dto.categoryName}"></td>
           <td>
             <a
-              th:href="@{read(id=${dto.id})}"
+              th:href="@{read(id=${dto.id},page=${requestDto.page},size=${requestDto.size}, type=${requestDto.type}, keyword=${requestDto.keyword})}"
               th:text="${dto.title}"
               class="text-decoration-none"
             ></a>
@@ -39,7 +37,7 @@
         <li class="page-item" th:if="${result.prev}">
           <a
             class="page-link"
-            th:href="@{lsit(page=${result.start-1},size=${result.size})}"
+            th:href="@{list(page=${result.start-1},size=${result.size})}"
             >Previous</a
           >
         </li>
@@ -49,9 +47,10 @@
           aria-current="page"
           th:each="page : ${result.pageList}"
         >
+          <!-- 페이지 주소줄 맞춰서 따라 보내기  -->
           <a
             class="page-link"
-            th:href="@{lsit(page=${page},size=${result.size})}"
+            th:href="@{list(page=${page},size=${result.size}, type=${requestDto.type}, keyword=${requestDto.keyword})}"
             th:text="${page}"
           ></a>
         </li>
@@ -59,7 +58,7 @@
         <li class="page-item" th:if="${result.next}">
           <a
             class="page-link"
-            th:href="@{lsit(page=${result.end+1},size=${result.size})}"
+            th:href="@{list(page=${result.end+1},size=${result.size})}"
             >Next</a
           >
         </li>
@@ -68,7 +67,7 @@
   </div>
   <th:block layout:fragment="script">
     <script>
-      /* 스크립트작성 */
+      //스크립트 작성
       const msg = "[[${msg}]]";
       if (msg) {
         alert(msg);
