--- a/book/src/main/resources/templates/book/modify.html
+++ b/book/src/main/resources/templates/book/modify.html
@@ -85,15 +85,20 @@
           />
         </div>
       </div>
-
       <div>
         <button class="btn btn-primary">수정</button>
         <button type="button" class="btn btn-danger">삭제</button>
         <a th:href="@{list}" class="btn btn-secondary">목록</a>
       </div>
     </form>
+
+    <!-- 위 a태그안에 requestDto를 넣어도 되지만 아래처럼 폼히든을 만들어 붙여도 된다 -->
     <form action="" method="post" id="actionForm">
       <input type="hidden" name="id" th:value="${dto.id}" />
+      <input type="hidden" name="page" th:value="${requestDto.page}" />
+      <input type="hidden" name="size" th:value="${requestDto.size}" />
+      <input type="hidden" name="type" th:value="${requestDto.type}" />
+      <input type="hidden" name="keyword" th:value="${requestDto.keyword}" />
     </form>
   </div>
   <th:block layout:fragment="script">
