--- a/book/src/main/resources/templates/fragments/nav.html
+++ b/book/src/main/resources/templates/fragments/nav.html
@@ -19,22 +19,35 @@
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" th:href="@{/book/list}"
-            >도서 목록</a
+            >도서목록</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/book/create}">도서 등록</a>
+          <a class="nav-link" th:href="@{/book/create}">도서등록</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
+      <form class="d-flex" role="search" th:action="@{list}">
+        <!-- 검색 후 처음에 띄울 페이지는 1 page 임 -->
+        <input type="hidden" name="page" value="1" />
+        <!-- 클래스명을 기준으로 앞자리만 소문자로 바꿔서 사용 pageRequestDto / modelattribute로 requestDto이름 바꿈-->
+        <input type="hidden" name="size" th:value="${requestDto.size}" />
         <select name="type" id="type" class="form-select me-2">
-          <option value="">조건 선택</option>
-          <option value="c">분류</option>
-          <option value="t">제목</option>
-          <option value="w">저자</option>
+          <!-- 검색한 내용 유지 -->
+          <option value="" th:selected="${requestDto.type == null}">
+            조건 선택
+          </option>
+          <option value="c" th:selected="${requestDto.type == 'c'}">
+            분류
+          </option>
+          <option value="t" th:selected="${requestDto.type == 't'}">
+            제목
+          </option>
+          <option value="w" th:selected="${requestDto.type == 'w'}">
+            저자
+          </option>
         </select>
         <input
           class="form-control me-2"
@@ -42,6 +55,7 @@
           placeholder="Search"
           aria-label="Search"
           name="keyword"
+          th:value="${requestDto.keyword}"
         />
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
