--- a/book/src/main/resources/templates/layouts/layout.html
+++ b/book/src/main/resources/templates/layouts/layout.html
@@ -16,7 +16,7 @@
       content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
     />
     <meta name="generator" content="Hugo 0.122.0" />
-    <title>Memo</title>
+    <title>Book</title>
 
     <link
       rel="canonical"
@@ -118,10 +118,9 @@
     </th:block>
   </head>
   <body>
-    <!-- icon 영역 -->
-    <!-- replace:대체 / fragment/icon 에 icon이름이 붙은 영역 / fragment로 이름 붙여놓았음-->
+    <!--icon 영역-->
     <div th:replace="~{/fragments/icon::icon}"></div>
-    <!-- nav 영역 -->
+    <!--nav 영역-->
     <div th:replace="~{/fragments/nav::nav}"></div>
 
     <main class="container" layout:fragment="content">
