--- a/board/src/main/resources/templates/fragments/sidebar.html
+++ b/board/src/main/resources/templates/fragments/sidebar.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-  <!-- Sidebar-->
+<html>
   <div th:fragment="sidebar">
     <div class="border-end bg-white" id="sidebar-wrapper">
       <div class="sidebar-heading border-bottom bg-light">Board</div>
       <div class="list-group list-group-flush">
         <a
           class="list-group-item list-group-item-action list-group-item-light p-3"
-          href=""
-          >Dashboard</a
+          href="/board/create?page=1&size=10&type=&keyword="
+          >Create</a
         >
         <a
           class="list-group-item list-group-item-action list-group-item-light p-3"
