--- a/board/src/main/resources/templates/layouts/layout.html
+++ b/board/src/main/resources/templates/layouts/layout.html
@@ -21,7 +21,7 @@
 
       <!-- Page content wrapper-->
       <div id="page-content-wrapper">
-        <!-- Top navigation / header로 뺐으니 어디에 있다고 알려줘야함-->
+        <!-- Top navigation-->
         <div th:replace="~{/fragments/header::header}"></div>
         <!-- Page content-->
         <div class="container-fluid mt-3">
@@ -32,9 +32,8 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script th:src="@{js/scripts.js}"></script>
+    <script th:src="@{/js/scripts.js}"></script>
     <!-- Custom JS -->
-    <!-- 데코레이트를layout으로 잡았기에 js도 여기에 세팅해야함 -->
-    <th:block layout:fragment="script"></th:block>
+    <th:block layout:fragment="script"> </th:block>
   </body>
 </html>
