--- a/movie/src/main/resources/templates/fragments/sidebar.html
+++ b/movie/src/main/resources/templates/fragments/sidebar.html
@@ -62,7 +62,9 @@
               <span class="ml-4">Create</span>
             </a>
           </li>
-          <li class="relative px-6 py-3">
+          <!-- 인증된 정보가 없다면 -->
+
+          <li class="relative px-6 py-3" sec:authorize="!isAuthenticated()">
             <a
               class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
               th:href="@{/member/login}"
@@ -81,7 +83,7 @@
                   d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"
                 ></path>
               </svg>
-              <span class="ml-4">Cards</span>
+              <span class="ml-4">Login</span>
             </a>
           </li>
           <li class="relative px-6 py-3">
