--- a/movie/src/main/resources/templates/member/login.html
+++ b/movie/src/main/resources/templates/member/login.html
@@ -54,6 +54,7 @@
                 >
                 Log in
                 </button>
+                <div th:if="${param.error}" class="text-danger">이메일이나 비밀번호를 확인해 주세요</div>
         </form>
             <hr class="my-8" />
 
