--- a/movie/src/main/resources/templates/member/register.html
+++ b/movie/src/main/resources/templates/member/register.html
@@ -30,12 +30,18 @@
               >
                 Create account
               </h1>
+              <form th:action="@{/member/register}" method="post" th:object="${memberDto}">
               <label class="block text-sm">
                 <span class="text-gray-700 dark:text-gray-400">Email</span>
                 <input
                   class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
                   placeholder="Jane Doe"
+                  name="email"
+                  th:value="${memberDto.email}"
                 />
+                <div th:if="${#fields.hasErrors('email')}"
+                    th:errors="*{email}"
+                    class="text-danger"></div>
               </label>
               <label class="block mt-4 text-sm">
                 <span class="text-gray-700 dark:text-gray-400">Password</span>
@@ -43,19 +49,27 @@
                   class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
                   placeholder="***************"
                   type="password"
+                  name="password"
                 />
+                <div th:if="${#fields.hasErrors('password')}"
+                    th:errors="*{password}"
+                    class="text-danger"></div>
               </label>
               <label class="block mt-4 text-sm">
                 <span class="text-gray-700 dark:text-gray-400">
-                  Confirm password
+                  NickName
                 </span>
                 <input
                   class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-                  placeholder="***************"
-                  type="password"
+                  placeholder="nickname"
+                  type="text"
+                  name="nickname"
+                  th:value="${memberDto.nickname}"
                 />
+                <div th:if="${#fields.hasErrors('nickname')}"
+                    th:errors="*{nickname}"
+                    class="text-danger"></div>
               </label>
-
               <div class="flex mt-6 text-sm">
                 <label class="flex items-center dark:text-gray-400">
                   <input
@@ -68,21 +82,19 @@
                   </span>
                 </label>
               </div>
-
-              <!-- You should use a button here, as the anchor is only used for the example  -->
-              <a
-                class="block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
-                href="./login.html"
-              >
+              <button
+                type="submit"
+                class="block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
                 Create account
-              </a>
+              </button>
+            </form>
 
               <hr class="my-8" />
 
               <p class="mt-4">
                 <a
                   class="text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline"
-                  href="./login.html"
+                  th:href="@{/member/login}"
                 >
                   Already have an account? Login
                 </a>
