--- a/movie/src/main/resources/templates/fragments/sidebar.html
+++ b/movie/src/main/resources/templates/fragments/sidebar.html
@@ -40,7 +40,8 @@
           </li>
         </ul>
         <ul>
-          <li class="relative px-6 py-3">
+          <!-- 인증 + ADMIN 일때 -->
+          <li class="relative px-6 py-3" sec:authorize="hasRole('ADMIN')">
             <a
               class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
               th:href="@{/movie/create}"
