--- a/movie/src/main/resources/templates/member/register.html
+++ b/movie/src/main/resources/templates/member/register.html
@@ -3,34 +3,34 @@
   <th:block layout:fragment="css">
     <link rel="stylesheet" th:href="@{/css/upload.css}">
   </th:block>
+  <div class="flex items-center min-h-screen p-6 bg-gray-50 dark:bg-gray-900" layout:fragment="content" style="min-height:80vh">
+    <div
+      class="flex-1 h-full max-w-4xl mx-auto overflow-hidden bg-white rounded-lg shadow-xl dark:bg-gray-800"
+    >
+      <div class="flex flex-col overflow-y-auto md:flex-row">
+        <div class="h-32 md:h-auto md:w-1/2">
+          <img
+            aria-hidden="true"
+            class="object-cover w-full h-full dark:hidden"
+            src="../assets/img/create-account-office.jpeg"
+            alt="Office"
+          />
+          <img
+            aria-hidden="true"
+            class="hidden object-cover w-full h-full dark:block"
+            src="../assets/img/create-account-office-dark.jpeg"
+            alt="Office"
+          />
+        </div>
+        <div class="flex items-center justify-center p-6 sm:p-12 md:w-1/2">
+          <div class="w-full">
+            <h1
+              class="mb-4 text-xl font-semibold text-gray-700 dark:text-gray-200"
+            >
+              Create account
+            </h1>
 
-    <div class="flex items-center min-h-screen p-6 bg-gray-50 dark:bg-gray-900" layout:fragment="content" style="min-height:80vh">
-      <div
-        class="flex-1 h-full max-w-4xl mx-auto overflow-hidden bg-white rounded-lg shadow-xl dark:bg-gray-800"
-      >
-        <div class="flex flex-col overflow-y-auto md:flex-row">
-          <div class="h-32 md:h-auto md:w-1/2">
-            <img
-              aria-hidden="true"
-              class="object-cover w-full h-full dark:hidden"
-              src="../assets/img/create-account-office.jpeg"
-              alt="Office"
-            />
-            <img
-              aria-hidden="true"
-              class="hidden object-cover w-full h-full dark:block"
-              src="../assets/img/create-account-office-dark.jpeg"
-              alt="Office"
-            />
-          </div>
-          <div class="flex items-center justify-center p-6 sm:p-12 md:w-1/2">
-            <div class="w-full">
-              <h1
-                class="mb-4 text-xl font-semibold text-gray-700 dark:text-gray-200"
-              >
-                Create account
-              </h1>
-              <form th:action="@{/member/register}" method="post" th:object="${memberDto}">
+            <form th:action="@{/member/register}" method="post" th:object="${memberDto}">
               <label class="block text-sm">
                 <span class="text-gray-700 dark:text-gray-400">Email</span>
                 <input
@@ -39,9 +39,7 @@
                   name="email"
                   th:value="${memberDto.email}"
                 />
-                <div th:if="${#fields.hasErrors('email')}"
-                    th:errors="*{email}"
-                    class="text-danger"></div>
+                <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></div>     
               </label>
               <label class="block mt-4 text-sm">
                 <span class="text-gray-700 dark:text-gray-400">Password</span>
@@ -49,15 +47,13 @@
                   class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
                   placeholder="***************"
                   type="password"
-                  name="password"
+                  name="password"                  
                 />
-                <div th:if="${#fields.hasErrors('password')}"
-                    th:errors="*{password}"
-                    class="text-danger"></div>
+                <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger"></div>
               </label>
               <label class="block mt-4 text-sm">
                 <span class="text-gray-700 dark:text-gray-400">
-                  NickName
+                  Nickname
                 </span>
                 <input
                   class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
@@ -66,13 +62,13 @@
                   name="nickname"
                   th:value="${memberDto.nickname}"
                 />
-                <div th:if="${#fields.hasErrors('nickname')}"
-                    th:errors="*{nickname}"
-                    class="text-danger"></div>
+                <div th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="text-danger"></div>
               </label>
+  
               <div class="flex mt-6 text-sm">
                 <label class="flex items-center dark:text-gray-400">
                   <input
+                    name="check"
                     type="checkbox"
                     class="text-purple-600 form-checkbox focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray"
                   />
@@ -81,28 +77,27 @@
                     <span class="underline">privacy policy</span>
                   </span>
                 </label>
-              </div>
-              <button
-                type="submit"
-                class="block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
-                Create account
+              </div>   
+              <div th:if="${check}" th:text="${check}" class="text-danger text-sm"></div>             
+              <button type="submit"
+                class="block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"              
+              >Create account
               </button>
             </form>
 
-              <hr class="my-8" />
+            <hr class="my-8" />          
 
-              <p class="mt-4">
-                <a
-                  class="text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline"
-                  th:href="@{/member/login}"
-                >
-                  Already have an account? Login
-                </a>
-              </p>
-            </div>
+            <p class="mt-4">
+              <a
+                class="text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline"
+                th:href="@{/member/login}"
+              >
+                Already have an account? Login
+              </a>
+            </p>
           </div>
         </div>
       </div>
     </div>
-
+  </div>
 </html>
