--- a/movie/src/main/resources/templates/fragments/sidebar.html
+++ b/movie/src/main/resources/templates/fragments/sidebar.html
@@ -5,10 +5,7 @@
       class="z-20 hidden w-64 overflow-y-auto bg-white dark:bg-gray-800 md:block flex-shrink-0"
     >
       <div class="py-4 text-gray-500 dark:text-gray-400">
-        <a
-          class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200"
-          th:href="@{/movie/list}"
-        >
+        <a class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200" th:href="@{/movie/list}">
           Movie
         </a>
         <ul class="mt-6">
@@ -64,7 +61,6 @@
             </a>
           </li>
           <!-- 인증된 정보가 없다면 -->
-
           <li class="relative px-6 py-3" sec:authorize="!isAuthenticated()">
             <a
               class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
@@ -195,12 +191,7 @@
                 </svg>
                 <span class="ml-4">Pages</span>
               </span>
-              <svg
-                class="w-4 h-4"
-                aria-hidden="true"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-              >
+              <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
                 <path
                   fill-rule="evenodd"
                   d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
@@ -227,16 +218,12 @@
                 <li
                   class="px-2 py-1 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                 >
-                  <a class="w-full" href="pages/create-account.html">
-                    Create account
-                  </a>
+                  <a class="w-full" href="pages/create-account.html"> Create account </a>
                 </li>
                 <li
                   class="px-2 py-1 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                 >
-                  <a class="w-full" href="pages/forgot-password.html">
-                    Forgot password
-                  </a>
+                  <a class="w-full" href="pages/forgot-password.html"> Forgot password </a>
                 </li>
                 <li
                   class="px-2 py-1 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
@@ -287,12 +274,7 @@
       @keydown.escape="closeSideMenu"
     >
       <div class="py-4 text-gray-500 dark:text-gray-400">
-        <a
-          class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200"
-          href="#"
-        >
-          Windmill
-        </a>
+        <a class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200" href="#"> Windmill </a>
         <ul class="mt-6">
           <li class="relative px-6 py-3">
             <span
@@ -474,12 +456,7 @@
                 </svg>
                 <span class="ml-4">Pages</span>
               </span>
-              <svg
-                class="w-4 h-4"
-                aria-hidden="true"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-              >
+              <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
                 <path
                   fill-rule="evenodd"
                   d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
@@ -506,16 +483,12 @@
                 <li
                   class="px-2 py-1 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                 >
-                  <a class="w-full" href="pages/create-account.html">
-                    Create account
-                  </a>
+                  <a class="w-full" href="pages/create-account.html"> Create account </a>
                 </li>
                 <li
                   class="px-2 py-1 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                 >
-                  <a class="w-full" href="pages/forgot-password.html">
-                    Forgot password
-                  </a>
+                  <a class="w-full" href="pages/forgot-password.html"> Forgot password </a>
                 </li>
                 <li
                   class="px-2 py-1 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
