--- a/movie/src/main/resources/templates/member/login.html
+++ b/movie/src/main/resources/templates/member/login.html
@@ -29,34 +29,35 @@
             >
               Login
             </h1>
-            <form th:action="@{/member/login}" method="post">
 
-                <label class="block text-sm">
-                <span class="text-gray-700 dark:text-gray-400">Email</span>
-                <input
-                    class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-                    placeholder="Jane Doe"
-                    name="username"
-                />
-                </label>
-                <label class="block mt-4 text-sm">
-                <span class="text-gray-700 dark:text-gray-400">Password</span>
-                <input
-                    class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-                    placeholder="***************"
-                    type="password"
-                    name="password"
-                />
-                </label>
-                <button
-                class="block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
-                href="../index.html"
-                >
-                Log in
-                </button>
-                <div th:if="${param.error}" class="text-danger">이메일이나 비밀번호를 확인해 주세요</div>
-        </form>
-            <hr class="my-8" />
+          <form th:action="@{/member/login}" method="post">
+            <label class="block text-sm">
+              <span class="text-gray-700 dark:text-gray-400">Email</span>
+              <input
+                class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+                placeholder="Jane@google.com"
+                name="username"
+              />
+            </label>
+            <label class="block mt-4 text-sm">
+              <span class="text-gray-700 dark:text-gray-400">Password</span>
+              <input
+                class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+                placeholder="***************"
+                type="password"
+                name="password"
+              />
+            </label>
+            <button
+              class="block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
+              type="submit"
+            >
+              Log in
+            </button>
+            <div th:if="${param.error}" class="text-danger small">이메일이나 비밀번호를 확인해 주세요</div>
+          </form>
+
+            <hr class="my-8" />           
 
             <p class="mt-4">
               <a
@@ -69,7 +70,7 @@
             <p class="mt-1">
               <a
                 class="text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline"
-                href="./create-account.html"
+                th:href="@{/member/register}"
               >
                 Create account
               </a>
