--- a/mybatis/src/main/resources/templates/book/list.html
+++ b/mybatis/src/main/resources/templates/book/list.html
@@ -17,27 +17,27 @@
         </tr>
       </thead>
       <tbody>
-        <!-- <tr th:each="dto : ${result.dtoList}">
+        <tr th:each="dto : ${result.dtoList}">
           <th scope="row" th:text="${dto.id}"></th>
           <td th:text="${dto.categoryName}"></td>
           <td>
             <a
-              th:href="@{read(id=${dto.id},page=${requestDto.page},size=${requestDto.size}, type=${requestDto.type}, keyword=${requestDto.keyword})}"
+              th:href="@{read(id=${dto.id},page=${requestDto.page},size=${requestDto.size},type=${requestDto.type},keyword=${requestDto.keyword})}"
               th:text="${dto.title}"
               class="text-decoration-none"
             ></a>
           </td>
           <td th:text="${dto.writer}"></td>
           <td th:text="${dto.publisherName}"></td>
-        </tr> -->
+        </tr>
       </tbody>
     </table>
     <nav aria-label="...">
       <ul class="pagination justify-content-center">
-        <!-- <li class="page-item" th:if="${result.prev}">
+        <li class="page-item" th:if="${result.prev}">
           <a
             class="page-link"
-            th:href="@{list(page=${result.start-1},size=${result.size})}"
+            th:href="@{list(page=${result.start-1},size=${requestDto.size})}"
             >Previous</a
           >
         </li>
@@ -47,10 +47,9 @@
           aria-current="page"
           th:each="page : ${result.pageList}"
         >
-          페이지 주소줄 맞춰서 따라 보내기
           <a
             class="page-link"
-            th:href="@{list(page=${page},size=${result.size}, type=${requestDto.type}, keyword=${requestDto.keyword})}"
+            th:href="@{list(page=${page},size=${requestDto.size},type=${requestDto.type},keyword=${requestDto.keyword})}"
             th:text="${page}"
           ></a>
         </li>
@@ -58,10 +57,10 @@
         <li class="page-item" th:if="${result.next}">
           <a
             class="page-link"
-            th:href="@{list(page=${result.end+1},size=${result.size})}"
+            th:href="@{list(page=${result.end+1},size=${requestDto.size})}"
             >Next</a
           >
-        </li> -->
+        </li>
       </ul>
     </nav>
   </div>
